Responsive hero component

--- a/tutorials/code/next-corporate-site/front/styles/index.css
+++ b/tutorials/code/next-corporate-site/front/styles/index.css
@@ -1,3 +1,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
+
+html {
+  font-size: 13px;
+}
+
+@media screen and (min-width: 640px) {
+  html {
+    font-size: 14px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  html {
+    font-size: 15px;
+  }
+}
+
+.rich-text a {
+  @apply text-blue-600 underline;
+}
